--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
     <div class="aaa">
         <img src="eisenhower-matrix.jpg" alt="foto"><a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
     </div>
-<div class="centered-main-page-element"><p id='topSectionForAddingElementToList'><label for="new-task">Add Item</label><div class="task-row-wrapper"><input id='new-task'class="task" type="text"><button>Add</button></div>
-</p><h3>Todo</h3>
+<div class="centered-main-page-element">
+    <p id='topSectionForAddingElementToList'>
+        <label for="new-task">Add Item</label>
+        <div class="task-row-wrapper">
+            <input id='new-task'class="task" type="text">
+            <button>Add</button>
+        </div>
+    </p>
+<h3>Todo</h3>
 <ul id='incompleteTasks'>
     <li><input type='checkbox'>
         <label class="task">Pay Bills</label>
