--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg" alt="foto"></button></li>
 </ul>
 </div>
-<script type="text/javascript" SRC="app.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
  
