refactor:add tag <form> п.1

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <img src="eisenhower-matrix.jpg" alt="foto"><a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
     </div>
 <div class="centered-main-page-element">
+    <form>
     <p id='topSectionForAddingElementToList'>
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
@@ -37,6 +38,7 @@
 </ul>
 </div>
 <script type="text/javascript" src="app.js"></script>
+</form>
 </body>
 </html>
  
