--- a/index.html
+++ b/index.html
@@ -10,36 +10,50 @@
 </head>
 <body>
     <div class="aaa">
-        <img src="eisenhower-matrix.jpg" alt="foto"><a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
+        <img src="eisenhower-matrix.jpg" alt="foto"><a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
     </div>
-<div class="centered-main-page-element">
+    <div class="centered-main-page-element">
     <form>
-    <p id='topSectionForAddingElementToList'>
+    <p id="topSectionForAddingElementToList"></p>
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-            <input id='new-task'class="task" type="text">
+            <input id="new-task"class="task" type="text">
             <button>Add</button>
         </div>
-    </p>
-<h3>Todo</h3>
-<ul id='incompleteTasks'>
-    <li><input type='checkbox'>
+    <h3>Todo</h3>
+        <ul id="incompleteTasks">
+    <li class="editMode"></li>
+        <input type="checkbox">
         <label class="task">Pay Bills</label>
-        <input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg" alt="foto"></button></li>
-    <li class="editMode"><input type="checkbox">
+        <input type="text" class="task">
+        <button class="edit">Edit</button>
+        <button class="delete">
+            <img src="./remove.svg" alt="foto">
+        </button>
+    <li class="editMode"></li>
+        <input type="checkbox">
         <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task"><button class='edit'>Save</button><button class="delete"><img src="./remove.svg"></button></li>
-</ul>
-<h3>Completed</h3>
-<ul id="completed-tasks">
-    <li><input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg" alt="foto"></button></li>
-</ul>
-</div>
-<script type="text/javascript" src="app.js"></script>
+        <input type="text" value="Go Shopping" class="task">
+        <button class="edit">Save</button>
+        <button class="delete">
+            <img src="./remove.svg" alt="foto">
+        </button>
+    </ul>
+    <h3>Completed</h3>
+    <ul id="completed-tasks">
+        <li class="editMode"></li>
+            <input type="checkbox" checked>
+            <label class="task">See the Doctor</label>
+            <input type="text" class="task">
+            <button class="edit">Edit</button>
+            <button class="delete">
+                <img src="./remove.svg" alt="foto">
+            </button>
+    </ul>
+     </div> 
 </form>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
  
-   
+ 
